<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restuarant Detector</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="mile1">mile1</string>
    <string name="mile2">mile2</string>
    <string name="mile3">mile3</string>
    <string name="mile5">mile5</string>
    <string name="mile10">mile10</string>
    <string name="distance">Distance</string>
    <string name="price">Price</string>  
	<string name="rating">Rating</string>
	<string name="searchLabel">Search for</string>
	<string name="descr_overflow_button">Popmenu in action</string>
	<string name="resultCardImage">resultCardImage</string>
	<string name="welcomeText">Welcome </string>
	<string name="filters">Filters</string>
	<string name="filters_used">Filters used</string>
	<string name="time">Time</string>
	<string name="noresults">No results found</string>
	<string name="reviewername">Reviewer Name</string>
	<string name="reviewerreview">says "</string>
	<string name="noresultsextra">Try different filter</string>
</resources>